Adds tags for some of the quotes

--- a/a_random_quote_generator-v1 (1)/css/styles.css
+++ b/a_random_quote_generator-v1 (1)/css/styles.css
@@ -101,6 +101,15 @@ h1 {
   content: "—";
 }
 
+.tags {
+  font-size: 20px;
+  font-style: normal;
+}
+
+.tags:before {
+  content: " • ";
+}
+
 .citation {
   font-style: italic;
 }
